Change textmeshpro dependency to version 3.0.5
Downgrade textmeshpro dependency version to 3.0.5

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "category": "UI Plugin",
     "dependencies": {
       "com.unity.ugui": "1.0.0",
-      "com.unity.textmeshpro": ">=3.0.6"
+      "com.unity.textmeshpro": "3.0.5"
     },
     "repository": {
       "url": "https://github.com/herghys/Unity-Custom-Dropdown.git",
